# mlone

./: .clang-format  .clangd  CMakeLists.txt  a.out  run-build.sh
.cache/clangd/index/: main.cpp.DD1011543537BDFE.idx
app/include/: debug.hpp  matrix.hpp  matrix_config.hpp  matrix_st.hpp
app/src/: matrix.cpp  matrix_st.cpp  sum.cpp
app/testing/: matrix.cc  test.cc
cmake/: CMakeLists.txt  build.sh
python/: main.py
src/: benchmark.cpp  fileio.cpp  gradient.cpp  graph.cpp  machine.cpp  main.cpp  matMath.cpp  matrix.cpp  matrix.h  matrix.hpp  matrixTest.hpp  testHelper.cpp
src/include/: benchmark.hpp  fileio.hpp  gradient.hpp  graph.hpp  machine.hpp  matMath.hpp  matrix.hpp  testHelper.hpp
src/testing/: fileio.cc  graph.cc  matrix.cc  matrixTest.cc  testInit.cc
